--- a/deployments/worker1/worker1-pod.yaml
+++ b/deployments/worker1/worker1-pod.yaml
@@ -15,7 +15,7 @@ spec:
       restartPolicy: Always
       containers:
       - name: worker1-container
-        image: worker1:1.0  # Replace with the name of your Docker image if it's different
+        image: worker1:1.0
         imagePullPolicy: Never
         env:
         - name: KAFKA_BROKER_SERVICE
@@ -27,12 +27,14 @@ spec:
             secretKeyRef:
               name: my-kafka-user-passwords
               key: client-passwords
+        - name: KAFKA_CONSUMER_GROUP
+          value: "worker1-group"  # Unique consumer group for worker1
         volumeMounts:
         - mountPath: "/mnt"
           name: worker1-volume
       volumes:
       - name: worker1-volume
         persistentVolumeClaim:
-          claimName: worker1-pvc  # Make sure the PVC exists
+          claimName: worker1-pvc
       nodeSelector:
-        kubernetes.io/hostname: kind-worker  # Ensures scheduling on kind-worker node
+        kubernetes.io/hostname: kind-worker
